--- a/src/routes/global.sass
+++ b/src/routes/global.sass
@@ -1,7 +1,30 @@
+$main: #31a47e
+$main-dark: #31857e
+
+@font-face
+	font-family: lexendDeca
+	src: url("/lexend.woff2") format("woff2")
+	font-display: swap
+
 :root
+	font-family: lexendDeca, "Segoe UI", sans-serif
 	color: white
 	background-color: black
 
-h1
-	font-size: 1em
-	margin: 0.5em 0
+body
+	margin: 0
+
+main
+	padding: 2rem 1rem
+
+header
+	margin: 0
+	top: 0
+
+	height: 5vh
+	position: fixed
+	width: 100%
+	display: flex
+	align-items: center
+	justify-content: center
+	background-color: #31a47e
