--- a/src/routes/global.sass
+++ b/src/routes/global.sass
@@ -7,7 +7,7 @@ $main-dark: #31857e
 	font-display: swap
 
 :root
-	font-family: lexendDeca, "Segoe UI", sans-serif
+	font-family: lexendDeca, Arial, sans-serif
 	color: black
 	background-color: white
 
@@ -17,11 +17,9 @@ body
 main
 	padding: 5rem 8rem
 
-.grid
-	width: 100%
-	display: grid
-	grid-template-columns: 1fr 1fr
-	column-gap: 0.7rem
+p
+	line-height: 1.5rem
+
 
 .eccb
 	position: absolute
@@ -31,26 +29,44 @@ main
 	left: -30%
 	max-width: 80vw
 
+.grid
+	width: 100%
+	display: grid
+	grid-template-columns: 1fr 1fr
+	column-gap: 0.7rem
+
 header
+	width: 100%
 	font-size: 1.2rem
-	color: white
-	margin: 0
 	top: 0
+	align-items: center
+	display: flex
+	justify-content: space-between
 
 	height: 8vh
 	position: fixed
 
-	align-items: center
-	justify-content: center
 	background-color: #31a47e
 
+	.right
+		margin-right: 8rem
+		padding: 0
+		display: flex
+		float: left
+		justify-content: flex-end
+		right: 1rem
+
+	.headerlogo
+		margin-left: 10vw
+		img
+			height: 5vh
+
 	a
-		margin: 0 1rem
+		min-width: 10%
+		margin: 0 1.5rem
 		color: white
 		text-decoration: none
 		&:hover
-			transition: transform 0.2s
-			transform: scale(1.1)
 			filter: brightness(85%)
 
 .left
@@ -59,8 +75,37 @@ header
 	text-align: right
 	padding: 0 8rem
 
-.headerlogo
-	height: 5vh
 .mainLogo
 	width: 30vw
+	max-width: 20rem
 	margin-top: 30vh
+	
+.cwsLogo
+	width: 25vw
+	max-width: 15rem
+.cwsButton
+	border: 0
+	background-color: $main
+	border-radius: 1rem
+	&:hover
+		background-color: $main-dark
+
+
+@media screen and (max-width: 600px)
+		
+	.eccb, .headerlogo
+		visibility: hidden
+
+	.grid, header
+		grid-template-columns: 0fr 1fr
+
+	.right a
+			min-width: 2rem
+
+	.mainLogo
+		width: 50vw
+		max-width: 28rem
+
+	.cwsLogo
+		width: 35vw
+		max-width: 20rem
