--- a/src/routes/global.sass
+++ b/src/routes/global.sass
@@ -42,14 +42,17 @@ header
 	align-items: center
 	display: flex
 	justify-content: space-between
+	align-items: center
+	align-content: center
 
-	height: 8vh
+	height: 65px
 	position: fixed
 
 	background-color: #31a47e
+	z-index: 10000
 
 	.right
-		margin-right: 8rem
+		margin-right: 7rem
 		padding: 0
 		display: flex
 		float: left
@@ -58,8 +61,9 @@ header
 
 	.headerlogo
 		margin-left: 10vw
+		margin-top: 7.5px
 		img
-			height: 5vh
+			height: 33px
 
 	a
 		min-width: 10%
@@ -67,13 +71,16 @@ header
 		color: white
 		text-decoration: none
 		&:hover
-			filter: brightness(85%)
+			filter: opacity(80%)
+
+.logoandtext
+	margin-top: -1vh
 
 .left
-	padding: 0 8rem
+	padding: 0 7rem
 .right
 	text-align: right
-	padding: 0 8rem
+	padding: 0 7rem
 
 .mainLogo
 	width: 30vw
@@ -87,17 +94,19 @@ header
 	border: 0
 	background-color: $main
 	border-radius: 1rem
+	margin-top: 1vh
 	&:hover
 		background-color: $main-dark
 
 
-@media screen and (max-width: 600px)
+@media screen and (max-width: 650px)
 		
 	.eccb, .headerlogo
 		visibility: hidden
 
 	.grid, header
 		grid-template-columns: 0fr 1fr
+		justify-content: center
 
 	.right a
 			min-width: 2rem
