Colour links in green

--- a/src/routes/global.sass
+++ b/src/routes/global.sass
@@ -20,6 +20,10 @@ main
 p
 	line-height: 1.5rem
 
+a
+	color: $main
+	&:hover
+		color: $main-dark
 
 .eccb
 	position: absolute
@@ -49,7 +53,6 @@ header
 	position: fixed
 
 	background-color: #31a47e
-	z-index: 10000
 
 	.right
 		margin-right: 7rem
