--- a/src/routes/global.sass
+++ b/src/routes/global.sass
@@ -34,6 +34,9 @@ a
 		transition: color 0.2s
 		color: $main-dark
 
+#bookmarklet
+	background: $main
+
 .thinpage
 	display: flex
 	justify-content: center
